--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col">
             {% if cart_items %}
-                <div class="table-responsive rounded shadow p-3 mb-5 bg-white rounded">
+                <div class="table-responsive rounded shadow p-3 mb-5 bg-white">
                     <table class="table table-hover">
                         <thead class="table-bg">
                             <tr>
@@ -41,7 +41,7 @@
                                 <tr>
                                     <td class="p-3">
                                         {% if item.product.productImageName %}
-                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}small/{{ item.product.productImageName }}" alt="{{ item.product.title }}" style="max-width: 200px;">
+                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}small/{{ item.product.productImageName }}" alt="{{ item.product.title }}" style="max-width: 100px;">
                                         {% else %}
                                         <img class="img-fluid rounded" src="{{ MEDIA_URL }} noimage.png" alt="{{ item.product.title }}">
                                         {% endif %}
@@ -90,11 +90,11 @@
                             </tr>
                             <tr>
                                 <td colspan="5" class="text-right">
-                                    <a href="{% url 'products' %}" class="btn btn-outline-primary rounded btn-lg">
+                                    <a href="{% url 'products' %}" class="btn btn-outline-primary rounded">
                                         <i class="fas fa-chevron-left mr-2"></i>
                                         Keep Shopping
                                     </a>
-                                    <a href="{% url 'checkout' %}" class="btn btn-primary rounded btn-lg">
+                                    <a href="{% url 'checkout' %}" class="btn btn-primary rounded">
                                         Secure Checkout
                                         <i class="fas fa-lock ml-2"></i>
                                     </a>
@@ -106,7 +106,7 @@
             {% else %}
                 <div class="alert alert-info" role="alert">
                     Your cart is empty. 
-                    <a href="{% url 'products' %}" class="btn btn-outline-primary rounded btn-lg ml-3">
+                    <a href="{% url 'products' %}" class="btn btn-outline-primary rounded ml-3">
                         <i class="fas fa-chevron-left"></i>
                         Keep Shopping
                     </a>
