--- a/products/templates/products/update_product.html
+++ b/products/templates/products/update_product.html
@@ -14,7 +14,7 @@
 <div class="overlay"></div>
     <div class="container p-3">
         <div class="row">
-            <div class="col-12 col-md-6 mt-4">
+            <div class="col-12 mt-4">
                 <hr>
                 <h2 class="col-12 text-center logo-font pb-2 my-5">Product Management</h2>
                 <h5 class="text-muted text-center">Edit a product</h5>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12">
                 <form enctype="multipart/form-data" method="post" action="{% url 'update_product' product.id %}" class="form mb-2">
                     {% csrf_token %}
                     {{ form | crispy }}
