Update styles of 404 and 500 error pages and add 403 page

--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -2,17 +2,17 @@
 {% load static %}
 {% block content %}
 
-<!-- Displays 404 error content -->
+<!-- Displays 403 error content -->
 <div class="container">
     <div class="row">
         <div class="col-12 my-5 text-center">
-            <img src="{{ MEDIA_URL }}noimage.png" alt="Tibet art store logo!!">
+            <img src="{{ MEDIA_URL }}noimage.png" alt="Tibet art store logo!">
         </div>
         <div class="col-12 mt-3 text-center">
-            <h2>ERROR - 404: Page Not Found!</h2>
+            <h2>ERROR - 403</h2>
         </div>
         <div class="col-12 text-center">
-            <h4 class="my-3">The Page you are looking for does not exist!</h4>
+            <h4 class="my-3">Sorry, you dont have permission to access this page</h4>
             <p class="mb-4" >Click the link below to return home... </p>
             <a class="btn btn-black mb-5" href="{% url 'home' %}">Home</a>
         </div>
