--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -3,7 +3,6 @@
 {% block content %}
 
 <!-- Displays 500 error content -->
-
 <div class="container">
     <div class="row">
         <div class="col-12 text-center">
@@ -15,7 +14,7 @@
         <div class="col-12 text-center">
             <h4 class="my-3">Oops something went wrong.</h4>
             <p class="mb-4" >Click the link below to return home and try again later... </p>
-            <a class="sensical-button  sensical-button-border" href="{% url 'home' %}">Home</a>
+            <a class="btn btn-black mb-5" href="{% url 'home' %}">Home</a>
         </div>
     </div>
 </div>
