For SEO and marketing purposes, update base.html and footer.html with FB page link and descriptions

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,30 +6,34 @@
 <head>
 
     {% block meta %}
+    <!-- Required meta tags -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% endblock %}
+    <meta name="description" content="Tibet Art Store Buddhist Thangka painting and Sculptures">
+    <meta name="keywords"
+        content="tibet store, meditation, buddhism, Buddhist ritual items,Buddhist sculptures, exotic art, himalayan artifacts, buddhist artwork, meditation, tantric diety, personal diety, Vajrayana diety, 
+        yoga and meditation, Tibetan thangka paintings" >
+    {% endblock meta %}
 
     {% block extra_meta %}
     {% endblock %}
 
     {% block corecss %}
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
+    <!-- my custom CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
-
+    <!-- Javascript -->
     {% block corejs %}
     <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script> -->
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -44,14 +48,17 @@
 
     {% block extra_js %}
     {% endblock %}
+    <!-- Favicon link -->
+    <link rel="shortcut icon" href="https://pp5-tibetartstore.s3.eu-central-1.amazonaws.com/static/favicon/favicon.png">
 
     <title>Tibet Art Store {% block extra_title %}{% endblock %}</title>
 </head>
 <body>
     <header class="container-fluid fix-top">
+        <!----Top Nav---->
         <div id="topnav" class="row bg-white pt-lg-2 d-flex">
         
-            <div class="col-12 col-sm-6 col-md-4 my-auto py-1 py-lg-0">
+            <div class="col-12 col-sm-6 col-md-4 my-auto py-1 py-lg-0 d-none d-md-block">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link text-center text-lg-left">
                     <img src="https://res.cloudinary.com/dript5k0k/image/upload/v1693344481/lH_4_ohw1ma.png" alt="Tibet Art Store Logo">
                 </a>
@@ -116,6 +123,7 @@
                 </ul>
             </div>
         </div>
+         <!-- Main Navbar -->
         <div class="row bg-white">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
@@ -134,31 +142,31 @@
         </div>
     </header>
     <main>
-        {% if messages %}
-        <div class="message-container-parent">
-            <div class="message-container">
-                {% for message in messages %}
-                    {% with message.level as level %}
-                        {% if level == 40 %}
-                            {% include 'includes/toasts/toast_error.html' %}
-                        {% elif level == 30 %}
-                            {% include 'includes/toasts/toast_warning.html' %}
-                        {% elif level == 25 %}
-                            {% include 'includes/toasts/toast_success.html' %}
-                        {% else %}
-                            {% include 'includes/toasts/toast_info.html' %}
-                        {% endif %}
-                    {% endwith %}
-                {% endfor %}
-            </div>
+    {% if messages %}
+    <div class="message-container-parent">
+        <div class="message-container">
+            {% for message in messages %}
+            {% with message.level as level %}
+            {% if level == 40 %}
+                {% include 'includes/toasts/toast_error.html' %}
+            {% elif level == 30 %}
+                {% include 'includes/toasts/toast_warning.html' %}
+            {% elif level == 25 %}
+                {% include 'includes/toasts/toast_success.html' %}
+            {% else %}
+                {% include 'includes/toasts/toast_info.html' %}
+            {% endif %}
+            {% endwith %}
+            {% endfor %}
         </div>
-        {% endif %}
+    </div>
+    {% endif %}
 
-        {% block page_header %}
-        {% endblock %}
+    {% block page_header %}
+    {% endblock %}
 
-        {% block content %}
-        {% endblock %}
+    {% block content %}
+    {% endblock %}
         
     </main>
 
@@ -173,7 +181,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <script>
-        // scrip to close image when clicked
+        // script to close image when clicked
         document.addEventListener('click', function(e) {
             if (e.target.matches('.lightbox')) {
                 lightbox.close();
