--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -13,16 +13,18 @@
             <strong>Phone:</strong> +49 178 55488 55<br>
             <strong>Email:</strong> info@tibetartstore.com<br>
           </p>
+          
         </div>
 
         <div class="col-lg-4 col-md-6">
           <h5>Join Our Newsletter</h5>
-          <p>GET 10% OFF when you sign up to our newsletter
-          Plus stay up to date with new arrivals, offers events and lots more!</p>
+          <p>GET 10% OFF when you sign up to our newsletter!</p>
           <form action="{% url 'newsletter' %}" method="post" class="text-center text-lg-left my-2">
               {% csrf_token %}
-            <input type="email" name="email"placeholder="Your email address"><input type="submit" class="btn btn-sm rounded ml-2 " value="Subscribe">
+            <input type="email" name="email"placeholder="Your email address"><input type="submit" class="btn btn-sm rounded ml-2 my-2 " value="Subscribe">
           </form>
+          <p>Plus stay up to date with new arrivals, offers events and lots more!</p>
+          <a href="https://www.facebook.com/profile.php?id=61551754485242" target="_blank"><i class="fab fa-facebook-square"></i> Follow us on Facebook!</a>
         </div>
 
         <div class="col-lg-4 col-md-6">
@@ -38,8 +40,8 @@
     </div>
   </div>
 
-  <div class="container">
-    <div class="d-flex justify-content-center text-center">
+  <div class="container py-3">
+    <div class="d-flex justify-content-center text-center pt-3">
       <div class="copyright">
         &copy;<strong><span>pzompa 2023</span></strong>.
       </div>
@@ -47,19 +49,5 @@
         Created for Code Institute assessment purposes only! 
       </div>
     </div>
-
-    <div class="social-links text-center">
-      <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="link to facebook- opens in a new tab">
-        <img src=https://res.cloudinary.com/dript5k0k/image/upload/v1688732514/facebook-app-icon-_3__lyymdz.webp alt=" facebook icon" class="social-icon">
-      </a>
-      <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="link to youtube- opens in a new tab">
-        <img src=https://res.cloudinary.com/dript5k0k/image/upload/v1688732499/youtube-square-color-icon-_3__gkrkvf.webp alt=" youtube icon" class="social-icon">
-      </a>
-      <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="link to instagram- opens in a new tab">
-        <img src=https://res.cloudinary.com/dript5k0k/image/upload/v1688732502/instagram-color-icon-_4__sgszee.webp alt=" instagram icon" class="social-icon">
-      </a>
-    </div>
-    
-  </div>
   
 </footer>
