--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,12 +13,12 @@
 <div class="container h-100 index-background">
 <!--     
     <div class="row mt-5 d-flex align-items-center custom-position"> -->
-    <div class="row d-flex align-items-center custom-position">
+    <div class="row d-flex custom-position" style="height:100vh;">
         
         <div class="col-12 text-center home-text">
-            <h2 class="text-black text-center custom-text ">
-                Welcome to the Tibet Art Shop: </h2>
-            <h3 class="lead">Discover arts and crafts from the Himalayas, where every piece tells a story.</h3>
+            <h1 class="text-black text-center custom-text ">
+                Welcome to the Tibet Art Shop: </h1>
+            <h2 class="lead">Discover <span>arts and crafts from the Himalayas,</span> where every piece tells a story.</h2>
         
             <div class="my-5">
                 <h4>
