--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -37,6 +37,9 @@ main {
     display: inline-block;
     position: relative;
 }
+.text-info {
+    color: #000!important;
+}
 
 .header-text::after {
     content: "";
@@ -130,11 +133,8 @@ footer a {
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
     flex-shrink: 0;
-    /* adjusted footer at bottom */
     position: relative;
     margin-top: -150px;
-    /* height: 310px; */
-    /*  */
 }
 
 .social-icon {
@@ -386,20 +386,7 @@ button:hover,
     .main-log-link {
         max-width: 80px;
     }
-/*    
-    .img-fluid {
-        max-width: 10px;
-    } */
-/*       
-    .action-btn {
-        flex-direction: column;
-        font-size: 8rem;
-    }
-        */
-    /* .action-btn .col-auto {
-        margin-bottom: 5px; 
-    }
-     */
+
     .btn {
         font-size: .8rem;
     }
@@ -441,8 +428,8 @@ button:hover,
     }
     
     .custom-text {
-        font-size: 24px;
-        margin-top: 250px;
+        font-size: 2.5rem;
+        margin-top: 100px;
     }
    
     
@@ -469,7 +456,11 @@ button:hover,
         font-size: 1.5rem;
     }
     .home-text {
-        margin-top: 250px;
+        margin-top: 0px;
+    }
+    .custom-text {
+        font-size: 2.5rem;
+        margin-top: 100px;
     }
 }
 
@@ -480,7 +471,7 @@ button:hover,
         background-position: center top;
     }
     .home-text {
-        margin-top: 250px;
+        margin-top: 100px;
     }
 
     footer h5 {
