--- a/aboutus/templates/aboutus/about_us.html
+++ b/aboutus/templates/aboutus/about_us.html
@@ -19,18 +19,18 @@
     <!-- Content Sections -->
     <div class="row mb-5">
         <div class="col-lg-12">
-            <p>"In 2014, the Tibet Art Shop was established to showcase the unique artistry from rural Tibet and Nepal. 
+            <p>"In 2014, the Tibet Art Shop was established to showcase the <span>unique artistry</span> from rural <strong>Tibet</strong> and <strong>Nepal</strong>. 
                 Recognizing the significance of these art forms, the shop aimed to provide them with a global platform, 
                 connecting them with art enthusiasts worldwide."</p>
                 <div class="d-flex justify-content-center align-items-center">
-                    <img class="col-12 col-md-6 text-center my-3" src="https://res.cloudinary.com/dript5k0k/image/upload/v1693344310/jambhala-mh-2882_002_icdvhh.webp" width="300px" alt="Zambalha image on the wall">
+                    <img class="col-12 col-md-6 text-center my-3" src="https://res.cloudinary.com/dript5k0k/image/upload/v1693344310/jambhala-mh-2882_002_icdvhh.webp" width="300px" alt="Image of Zambalha, god of wealth">
                 </div>
             <h4>The Beginning</h2>
 
             <p>In the initial days, the journey was nothing short of an odyssey. Art enthusiasts ventured where few 
                 had gone before, deep into the untouched corners of Tibet and Nepal.. Through verdant
-                valleys and over rugged mountains, they sought out hidden enclaves of artists in monasteries and
-                quaint villages, guardians of an age-old tradition of craftsmanship. These artists, often residing
+                valleys and over rugged mountains, they sought out hidden enclaves of artists in <strong>monasteries</strong> and
+                quaint villages, guardians of an <span>age-old tradition of craftsmanship</span>. These artists, often residing
                 in remote areas, were creating extraordinary pieces of art, yet their creations remained largely
                 secluded from the world, held back by the very mountains that nurtured them.</p>
                 <img class="col-12 col-md-4 mb-5 float-right text-center" src="https://res.cloudinary.com/dript5k0k/image/upload/v1695899334/2_p47ijt.webp" width="300px" alt="image of a Buddhist temple">
@@ -76,7 +76,6 @@
                 and the human spirit.</p>
                 <img class="col-12 col-md-4 text-center mb-5" src="https://res.cloudinary.com/dript5k0k/image/upload/v1695899287/milarepa-mh-l1_xhfdte.webp" width="200px" alt="painting on the wall">
 
-          
                 
             <h4 class="mb-3">Why Choose Tibet Art Shop?</h4>
             <ul id="reason">
