--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col">
             {% if cart_items %}
-                <div class="table-responsive rounded shadow p-3 mb-5 bg-white">
+                <div class="table-responsive rounded p-3 mb-5 bg-white">
                     <table class="table table-hover">
                         <thead class="table-bg">
                             <tr>
