--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -44,7 +44,7 @@
             <br>
             <p>{{ product.liquidHTML|safe }}</p>
             <div class="d-flex justify-content-center">
-                <div class="row w-100 my-3 mx-auto">
+                <div id="action_btns" class="row w-100 my-3 mx-auto">
                     <!-- Add to Cart Button -->
                     <div class="col-12 col-md-4 mb-2">
                         <form action="{% url 'add_to_cart' product.id %}" method="POST">
@@ -66,9 +66,9 @@
                             {% csrf_token %}
                             <input type="hidden" name="product_id" value="{{ product.id }}">
                             {% if is_favorited %}
-                                <button type="submit" class="btn btn-sm rounded" formaction="{% url 'remove_from_favorites' product.id %}">Remove from Favorites</button>
+                                <button type="submit" class="btn btn-sm rounded" formaction="{% url 'remove_from_favorites' product.id %}">Remove Favorite</button>
                             {% else %}
-                                <button type="submit" class="btn btn-sm rounded" formaction="{% url 'add_to_favorites' product.id %}">Add to Favorites</button>
+                                <button type="submit" class="btn btn-sm rounded" formaction="{% url 'add_to_favorites' product.id %}">Add to Favorite</button>
                             {% endif %}
                         </form>
                     {% else %}
